data/derived/comb/progs/unify/prog4655.ml.out
Characters 129-130:
  |2->buildSine(build(r,depth-1))
                      ^
Error: This expression has type int * int -> int
       but an expression was expected of type 'a -> (int * int -> int) * 'b
